styles/layouts/projects.css
.projects__title {
  padding: 20px;
}

.projects__item {
  padding: 10px 20px;
}

.projects__item:not(:last-child) {
  border-bottom: var(--border);
}

@media (max-width: 1024px) {
  .projects {
    text-align: center;
  }

  .projects__title {
    padding-block: 10px;
    border-bottom: var(--border);
  }

  .projects__item {
    background-color: var(--color-gray-alt-2);
  }
}

